Script Missing file checks
- Added Checks before pdf compilation for missing files in script
- Fixed typo in image name
- Added hard wrap in README file

--- a/presentación/Presentación.tex
+++ b/presentación/Presentación.tex
@@ -127,7 +127,7 @@
 
 \begin{frame}{Operador de Exclusión}
     \begin{figure}[h]
-        \includegraphics[trim = {0 150  0  0}, clip, width=\textwidth]{ecxlude1.png}
+        \includegraphics[trim = {0 150  0  0}, clip, width=\textwidth]{exclude1.png}
     \end{figure}
 \end{frame}
 
